--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -20,7 +20,7 @@
     <p class="hint">Redirecting to hosted UI…</p>
     <script>
       (function () {
-        var baseUrl = "https://mydomain.com/gesture-ui";
+        var baseUrl = "https://gesture-pilot.vercel.app/";
         var params = new URLSearchParams(window.location.search);
         var pluginId = params.get("pluginId");
         if (pluginId) {
