--- a/web-ui/index.html
+++ b/web-ui/index.html
@@ -122,7 +122,11 @@
         <video id="camera-video" autoplay playsinline muted></video>
         <canvas id="camera-canvas"></canvas>
       </div>
+      <div class="row" style="margin-top: 8px; align-items: center;">
+        <button id="camera-start" class="secondary">Start camera</button>
+      </div>
       <p class="subtle" id="camera-error" hidden></p>
+      <p class="subtle" id="camera-diagnostic"></p>
     </div>
 
     <div class="panel">
