--- a/web-ui/index.html
+++ b/web-ui/index.html
@@ -109,6 +109,20 @@
     </div>
 
     <div class="panel">
+      <label>Pairing</label>
+      <div class="row" style="margin-top: 8px; align-items: center;">
+        <div class="subtle">Pairing Code:</div>
+        <div id="pairing-code" class="subtle">—</div>
+        <button id="copy-code" class="secondary">Copy</button>
+      </div>
+      <div class="row" style="margin-top: 8px; align-items: center;">
+        <div class="subtle">Secret:</div>
+        <div id="pairing-secret" class="subtle">—</div>
+        <button id="copy-secret" class="secondary">Copy</button>
+      </div>
+    </div>
+
+    <div class="panel">
       <div class="toggle">
         <input id="enable-gestures" type="checkbox" />
         <label for="enable-gestures">Enable gestures</label>
