--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -97,6 +97,7 @@
         <span id="relay-status">Disconnected</span>
       </div>
       <p class="subtle" id="relay-last">Last command: —</p>
+      <p class="subtle" id="relay-error">Last error: —</p>
     </div>
 
     <script src="ui.js"></script>
