--- a/web-ui/index.html
+++ b/web-ui/index.html
@@ -106,6 +106,7 @@
         <span class="dot" id="conn-dot"></span>
         <span id="conn-text">Connecting…</span>
       </div>
+      <p class="subtle" id="relay-error" hidden></p>
     </div>
 
     <div class="panel">
