control with gestures is added

--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -81,7 +81,7 @@
 
     <div class="panel">
       <label>Relay Base URL</label>
-      <input id="relay-url" type="text" placeholder="https://your-relay.vercel.app" />
+      <input id="relay-url" type="text" placeholder="https://gesture-pilot-relay.vercel.app" value="https://gesture-pilot-relay.vercel.app" />
       <div style="height: 8px;"></div>
       <label>Session ID</label>
       <input id="relay-session" type="text" placeholder="e.g. a1b2c3" />
@@ -100,6 +100,6 @@
       <p class="subtle" id="relay-error">Last error: —</p>
     </div>
 
-    <script src="ui.js"></script>
+    <!-- UI_SCRIPT -->
   </body>
 </html>
