--- a/web-ui/index.html
+++ b/web-ui/index.html
@@ -128,6 +128,12 @@
         <input id="enable-gestures" type="checkbox" />
         <label for="enable-gestures">Enable gestures</label>
       </div>
+      <div class="row" style="margin-top: 8px; align-items: center;">
+        <label for="pan-sensitivity" class="subtle">Pan sensitivity</label>
+        <input id="pan-sensitivity" type="range" min="0.5" max="3" step="0.1" value="1.2" />
+        <span id="pan-sensitivity-value" class="subtle">1.2</span>
+      </div>
+      <p class="subtle" id="gesture-mode">Mode: IDLE</p>
       <p class="subtle" id="gesture-status">Gestures disabled</p>
     </div>
 
@@ -170,6 +176,6 @@
       </div>
     </div>
 
-    <script src="app.js"></script>
+    <script type="module" src="app.js"></script>
   </body>
 </html>
