ARM gestures added

--- a/web-ui/index.html
+++ b/web-ui/index.html
@@ -133,6 +133,7 @@
         <input id="pan-sensitivity" type="range" min="0.5" max="3" step="0.1" value="1.2" />
         <span id="pan-sensitivity-value" class="subtle">1.2</span>
       </div>
+      <p class="subtle" id="gesture-armed">Armed: OFF</p>
       <p class="subtle" id="gesture-mode">Mode: IDLE</p>
       <p class="subtle" id="gesture-status">Gestures disabled</p>
     </div>
