two hand zoom added

--- a/web-ui/index.html
+++ b/web-ui/index.html
@@ -144,6 +144,9 @@
       <p class="armed-indicator" id="gesture-armed">ARMED: OFF</p>
       <p class="subtle">Show ✌️ to toggle control</p>
       <p class="subtle" id="gesture-mode">Mode: IDLE</p>
+      <p class="subtle" id="gesture-hands">Hands: 0</p>
+      <p class="subtle" id="gesture-debug">Zoom: —</p>
+      <p class="subtle" id="gesture-last">Last cmd: —</p>
       <p class="subtle" id="gesture-status">Gestures disabled</p>
     </div>
 
