--- a/web-ui/index.html
+++ b/web-ui/index.html
@@ -54,6 +54,13 @@
         border: 1px solid #d7d9e2;
         font-size: 12px;
       }
+      select {
+        padding: 6px 8px;
+        border-radius: 8px;
+        border: 1px solid #d7d9e2;
+        font-size: 12px;
+        background: #fff;
+      }
       .toggle {
         display: flex;
         align-items: center;
@@ -160,6 +167,43 @@
         <label for="pan-sensitivity" class="subtle">Pan sensitivity</label>
         <input id="pan-sensitivity" type="range" min="0.5" max="3" step="0.1" value="1.2" />
         <span id="pan-sensitivity-value" class="subtle">1.2</span>
+      </div>
+      <div class="row" style="margin-top: 8px; align-items: center;">
+        <label for="trackpad-mode" class="subtle">Trackpad mode</label>
+        <select id="trackpad-mode">
+          <option value="v1" selected>v1 (relative + clutch)</option>
+          <option value="v2">v2 (active area)</option>
+        </select>
+      </div>
+      <div class="row" style="margin-top: 8px; align-items: center;">
+        <label for="clutch-delay" class="subtle">Clutch delay (ms)</label>
+        <input id="clutch-delay" type="range" min="100" max="600" step="25" value="250" />
+        <span id="clutch-delay-value" class="subtle">250</span>
+      </div>
+      <div class="row" style="margin-top: 8px; align-items: center;">
+        <label for="deadzone" class="subtle">Deadzone (px)</label>
+        <input id="deadzone" type="range" min="0" max="8" step="0.5" value="1.5" />
+        <span id="deadzone-value" class="subtle">1.5</span>
+      </div>
+      <div class="row" style="margin-top: 8px; align-items: center;">
+        <label for="ema-alpha" class="subtle">EMA alpha</label>
+        <input id="ema-alpha" type="range" min="0.05" max="0.6" step="0.05" value="0.22" />
+        <span id="ema-alpha-value" class="subtle">0.22</span>
+      </div>
+      <div class="row" style="margin-top: 8px; align-items: center;">
+        <label for="speed-gain" class="subtle">Speed gain</label>
+        <input id="speed-gain" type="range" min="0.0" max="0.08" step="0.005" value="0.03" />
+        <span id="speed-gain-value" class="subtle">0.030</span>
+      </div>
+      <div class="row" style="margin-top: 8px; align-items: center;">
+        <label for="max-gain" class="subtle">Max gain</label>
+        <input id="max-gain" type="range" min="1.0" max="5.0" step="0.25" value="3.0" />
+        <span id="max-gain-value" class="subtle">3.00</span>
+      </div>
+      <div class="row" style="margin-top: 8px; align-items: center;">
+        <label for="active-radius" class="subtle">Active radius (px)</label>
+        <input id="active-radius" type="range" min="20" max="200" step="10" value="90" />
+        <span id="active-radius-value" class="subtle">90</span>
       </div>
       <p class="subtle" id="gesture-mode">Mode: IDLE</p>
       <p class="subtle" id="gesture-hands">Hands: 0</p>
