--- a/web-ui/index.html
+++ b/web-ui/index.html
@@ -165,8 +165,8 @@
       </div>
       <div class="row" style="margin-top: 8px; align-items: center;">
         <label for="pan-sensitivity" class="subtle">Pan sensitivity</label>
-        <input id="pan-sensitivity" type="range" min="0.5" max="3" step="0.1" value="1.2" />
-        <span id="pan-sensitivity-value" class="subtle">1.2</span>
+        <input id="pan-sensitivity" type="range" min="0.2" max="8" step="0.2" value="2.0" />
+        <span id="pan-sensitivity-value" class="subtle">2.0</span>
       </div>
       <div class="row" style="margin-top: 8px; align-items: center;">
         <label for="trackpad-mode" class="subtle">Trackpad mode</label>
@@ -177,33 +177,38 @@
       </div>
       <div class="row" style="margin-top: 8px; align-items: center;">
         <label for="clutch-delay" class="subtle">Clutch delay (ms)</label>
-        <input id="clutch-delay" type="range" min="100" max="600" step="25" value="250" />
-        <span id="clutch-delay-value" class="subtle">250</span>
+        <input id="clutch-delay" type="range" min="50" max="800" step="25" value="200" />
+        <span id="clutch-delay-value" class="subtle">200</span>
       </div>
       <div class="row" style="margin-top: 8px; align-items: center;">
         <label for="deadzone" class="subtle">Deadzone (px)</label>
-        <input id="deadzone" type="range" min="0" max="8" step="0.5" value="1.5" />
-        <span id="deadzone-value" class="subtle">1.5</span>
+        <input id="deadzone" type="range" min="0" max="12" step="0.5" value="0.5" />
+        <span id="deadzone-value" class="subtle">0.5</span>
       </div>
       <div class="row" style="margin-top: 8px; align-items: center;">
         <label for="ema-alpha" class="subtle">EMA alpha</label>
-        <input id="ema-alpha" type="range" min="0.05" max="0.6" step="0.05" value="0.22" />
-        <span id="ema-alpha-value" class="subtle">0.22</span>
+        <input id="ema-alpha" type="range" min="0.05" max="0.9" step="0.05" value="0.35" />
+        <span id="ema-alpha-value" class="subtle">0.35</span>
       </div>
       <div class="row" style="margin-top: 8px; align-items: center;">
         <label for="speed-gain" class="subtle">Speed gain</label>
-        <input id="speed-gain" type="range" min="0.0" max="0.08" step="0.005" value="0.03" />
-        <span id="speed-gain-value" class="subtle">0.030</span>
+        <input id="speed-gain" type="range" min="0.0" max="0.2" step="0.01" value="0.06" />
+        <span id="speed-gain-value" class="subtle">0.060</span>
       </div>
       <div class="row" style="margin-top: 8px; align-items: center;">
         <label for="max-gain" class="subtle">Max gain</label>
-        <input id="max-gain" type="range" min="1.0" max="5.0" step="0.25" value="3.0" />
-        <span id="max-gain-value" class="subtle">3.00</span>
+        <input id="max-gain" type="range" min="1.0" max="10.0" step="0.5" value="5.0" />
+        <span id="max-gain-value" class="subtle">5.00</span>
+      </div>
+      <div class="row" style="margin-top: 8px; align-items: center;">
+        <label for="y-boost" class="subtle">Vertical boost</label>
+        <input id="y-boost" type="range" min="0.8" max="2.5" step="0.1" value="1.4" />
+        <span id="y-boost-value" class="subtle">1.4</span>
       </div>
       <div class="row" style="margin-top: 8px; align-items: center;">
         <label for="active-radius" class="subtle">Active radius (px)</label>
-        <input id="active-radius" type="range" min="20" max="200" step="10" value="90" />
-        <span id="active-radius-value" class="subtle">90</span>
+        <input id="active-radius" type="range" min="20" max="300" step="10" value="120" />
+        <span id="active-radius-value" class="subtle">120</span>
       </div>
       <p class="subtle" id="gesture-mode">Mode: IDLE</p>
       <p class="subtle" id="gesture-hands">Hands: 0</p>
