two fingers for pan

--- a/web-ui/index.html
+++ b/web-ui/index.html
@@ -213,7 +213,7 @@
         <canvas id="camera-canvas"></canvas>
         <div class="badge-overlay" id="gesture-badges">
           <span class="badge" id="badge-openpalm">Open Palm</span>
-          <span class="badge" id="badge-indexonly">OK Gesture</span>
+          <span class="badge" id="badge-indexonly">Two Fingers</span>
           <span class="badge" id="badge-zoom2h">Zoom 2H</span>
         </div>
       </div>
