--- a/web-ui/index.html
+++ b/web-ui/index.html
@@ -142,6 +142,7 @@
         <span id="conn-text">Connecting…</span>
       </div>
       <p class="subtle" id="relay-error" hidden></p>
+      <p class="subtle" id="relay-last-push">Last push: —</p>
     </div>
 
     <div class="panel">
