--- a/web-ui/index.html
+++ b/web-ui/index.html
@@ -172,9 +172,10 @@
       <div class="row" style="margin-top: 8px; align-items: center;">
         <label for="profile" class="subtle">Profile</label>
         <select id="profile">
-          <option value="linear">Trackpad Linear</option>
-          <option value="accelerated" selected>Trackpad Accelerated</option>
-          <option value="inertial">Touch Inertial</option>
+          <option value="linear" selected>Trackpad Linear</option>
+          <option value="linear-soft">Linear Soft</option>
+          <option value="linear-strong">Linear Strong</option>
+          <option value="linear-fast">Linear Fast</option>
         </select>
       </div>
       <div class="row" style="margin-top: 8px; align-items: center;">
