--- a/web-ui/index.html
+++ b/web-ui/index.html
@@ -172,10 +172,10 @@
       <div class="row" style="margin-top: 8px; align-items: center;">
         <label for="profile" class="subtle">Profile</label>
         <select id="profile">
-          <option value="linear-soft" selected>Linear Soft</option>
-          <option value="soft-precision">Soft Precision</option>
-          <option value="soft-balanced">Soft Balanced</option>
-          <option value="soft-flow">Soft Flow</option>
+          <option value="soft-precision" selected>Soft Precision</option>
+          <option value="precision-tight">Precision Tight</option>
+          <option value="precision-balanced">Precision Balanced</option>
+          <option value="precision-flow">Precision Flow</option>
         </select>
       </div>
       <div class="row" style="margin-top: 8px; align-items: center;">
