--- a/web-ui/index.html
+++ b/web-ui/index.html
@@ -190,9 +190,14 @@
         <span id="speed-gain-value" class="subtle">0.030</span>
       </div>
       <div class="row" style="margin-top: 8px; align-items: center;">
+        <label for="fast-boost" class="subtle">Fast boost</label>
+        <input id="fast-boost" type="range" min="0" max="2000" step="50" value="600" />
+        <span id="fast-boost-value" class="subtle">600</span>
+      </div>
+      <div class="row" style="margin-top: 8px; align-items: center;">
         <label for="max-gain" class="subtle">Max gain</label>
-        <input id="max-gain" type="range" min="1.0" max="50.0" step="1.0" value="4.0" />
-        <span id="max-gain-value" class="subtle">4.00</span>
+        <input id="max-gain" type="range" min="1.0" max="200.0" step="5.0" value="80.0" />
+        <span id="max-gain-value" class="subtle">80.00</span>
       </div>
       <div class="row" style="margin-top: 8px; align-items: center;">
         <label for="y-boost" class="subtle">Vertical boost</label>
