--- a/web-ui/index.html
+++ b/web-ui/index.html
@@ -220,7 +220,7 @@
         <div class="badge-overlay" id="gesture-badges">
           <span class="badge" id="badge-openpalm">Open Palm</span>
           <span class="badge" id="badge-indexonly">Two Fingers</span>
-          <span class="badge" id="badge-zoom2h">Zoom 2H</span>
+          <span class="badge" id="badge-zoom2h">Zoom Palm</span>
         </div>
       </div>
       <div class="row" style="margin-top: 8px; align-items: center;">
