web-sockets added

--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -83,6 +83,9 @@
       <label>Relay Base URL</label>
       <input id="relay-url" type="text" placeholder="https://gesture-pilot-relay.vercel.app" value="https://gesture-pilot-relay.vercel.app" />
       <div style="height: 8px;"></div>
+      <label>WS Relay URL (optional)</label>
+      <input id="relay-ws-url" type="text" placeholder="wss://YOUR-RENDER.onrender.com" />
+      <div style="height: 8px;"></div>
       <label>Session ID</label>
       <input id="relay-session" type="text" placeholder="e.g. a1b2c3" />
       <div style="height: 8px;"></div>
