--- a/web-ui/index.html
+++ b/web-ui/index.html
@@ -141,6 +141,7 @@
         <span class="dot" id="conn-dot"></span>
         <span id="conn-text">Connecting…</span>
       </div>
+      <p class="subtle" id="ws-status">WS: connecting…</p>
       <p class="subtle" id="relay-error" hidden></p>
       <p class="subtle" id="relay-last-push">Last push: —</p>
     </div>
