--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -83,9 +83,6 @@
       <label>Relay Base URL</label>
       <input id="relay-url" type="text" placeholder="https://gesture-pilot-relay.vercel.app" value="https://gesture-pilot-relay.vercel.app" />
       <div style="height: 8px;"></div>
-      <label>WS Relay URL (optional)</label>
-      <input id="relay-ws-url" type="text" placeholder="wss://YOUR-RENDER.onrender.com" />
-      <div style="height: 8px;"></div>
       <label>Session ID</label>
       <input id="relay-session" type="text" placeholder="e.g. a1b2c3" />
       <div style="height: 8px;"></div>
@@ -101,6 +98,9 @@
       </div>
       <p class="subtle" id="relay-last">Last command: —</p>
       <p class="subtle" id="relay-error">Last error: —</p>
+      <p class="subtle" id="poll-mode">Polling: —</p>
+      <p class="subtle" id="build-stamp">Build: 2026-02-21-23:50</p>
+      <p class="subtle" id="main-build">Main: —</p>
     </div>
 
     <!-- UI_SCRIPT -->
