--- a/web-ui/index.html
+++ b/web-ui/index.html
@@ -166,6 +166,12 @@
         <label for="enable-gestures">Enable gestures</label>
       </div>
       <div class="row" style="margin-top: 8px; align-items: center;">
+        <button id="enable-voice" class="secondary">Enable Voice</button>
+        <span class="subtle" id="voice-status">Voice: OFF</span>
+      </div>
+      <p class="subtle" id="voice-hint">Show LEFT open palm to trigger: “add text …”</p>
+      <p class="subtle" id="voice-transcript">Transcript: —</p>
+      <div class="row" style="margin-top: 8px; align-items: center;">
         <label for="pan-sensitivity" class="subtle">Pan sensitivity</label>
         <input id="pan-sensitivity" type="range" min="0.2" max="8" step="0.2" value="1.2" />
         <span id="pan-sensitivity-value" class="subtle">1.2</span>
