--- a/web-ui/index.html
+++ b/web-ui/index.html
@@ -115,6 +115,7 @@
       #camera-canvas {
         z-index: 2;
         pointer-events: none;
+        display: block;
       }
       .status {
         display: inline-flex;
