--- a/web-ui/index.html
+++ b/web-ui/index.html
@@ -159,7 +159,9 @@
         display: flex;
         gap: 6px;
         flex-wrap: wrap;
-        z-index: 4;
+        z-index: 9999;
+        pointer-events: none;
+        opacity: 1;
       }
     </style>
   </head>
@@ -171,6 +173,7 @@
 
     <div class="panel">
       <label>Camera preview</label>
+      <p class="subtle" id="badge-debug" style="margin-top: 6px;">Badges: —</p>
       <div class="camera">
         <video id="camera-video" autoplay playsinline muted></video>
         <canvas id="camera-canvas"></canvas>
