Revert "overlay back"
This reverts commit 034f8b7136515c320754bf1ca7238edf81e04c60.

--- a/web-ui/index.html
+++ b/web-ui/index.html
@@ -165,7 +165,7 @@
       <label>Camera preview</label>
       <div class="camera">
         <video id="camera-video" autoplay playsinline muted></video>
-        <canvas id="camera-canvas"></canvas>
+        <canvas id="camera-canvas" style="opacity: 0;"></canvas>
       </div>
     </div>
 
