--- a/web-ui/index.html
+++ b/web-ui/index.html
@@ -135,6 +135,7 @@
   </head>
   <body>
     <h1>Gesture Pilot</h1>
+    <!-- build: 2026-02-22-01:05 -->
 
     <div class="panel">
       <div class="status">
